--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -1,3 +1,32 @@
-body{
-background-color: red;
+body {
+    margin: 0;
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #212529 !important;
+    text-align: left;
+    background-color: #fff;
+}
+
+h4 {
+
+    font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif!important;
+    margin-top: 0!important;
+    margin-bottom: 0.5rem !important;
+    font-size: 1.5rem !important;
+    font-weight: 500 !important;
+    line-height: 1.2 !important;
+}
+
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,.1);
+}
+
+#developer-content {
+    background-color: #c4def5;
+    padding: 5px 10px;
 }
