--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -7,8 +7,8 @@ body {
     color: #212529 !important;
     text-align: left;
     background-color: #fff;
-    width: 200px;
-    min-width: 150px;
+    /*width: 200px;*/
+    min-width: 150px !important;
 }
 
 h4 {
@@ -31,9 +31,9 @@ hr {
 #developer-content {
     background-color: #c4def5;
     padding: 5px 10px;
-    width: 46%;
+    /*width: 46%;*/
 }
 
 #horizontal-header{
-    width: 50%;
+    /*width: 50%;*/
 }
