--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -9,6 +9,7 @@ body {
     background-color: #fff;
     /*width: 200px;*/
     min-width: 150px !important;
+    padding: 0px;
 }
 
 div.body {
@@ -36,9 +37,8 @@ hr {
 #developer-content {
     background-color: #c4def5;
     padding: 5px 10px;
-    /*width: 46%;*/
 }
 
-#horizontal-header{
-    /*width: 50%;*/
+.rst-versions.rst-badge{
+    display: none;
 }
