--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -7,8 +7,8 @@ body {
     color: #212529 !important;
     text-align: left;
     background-color: #fff;
-    /*width: 200px;*/
-    min-width: 150px !important;
+    width: 200px;
+    /*min-width: 150px !important;*/
     padding: 0px;
 }
 
